--- a/website/static/style.css
+++ b/website/static/style.css
@@ -1,4 +1,12 @@
 
+.no-underline {
+    text-decoration: none;
+  }
+
+  .no-underline {
+    text-decoration: none;
+  }
+  
   button[type=submit] {
     border: none;
     background-color: #4CAF50;
